--- a/tareas/db-essay-v2.ipynb
+++ b/tareas/db-essay-v2.ipynb
@@ -1953,7 +1953,7 @@
    "id": "changing-amateur",
    "metadata": {},
    "source": [
-    "El análisis estadístico de algunas consultas a la base de datos **sakila** se realizan en notebook de python: [db-essay-py.pynb](db-essay.pynb)."
+    "El análisis estadístico de algunas consultas a la base de datos **sakila** se realizan en notebook de python: [db-essay-py.pynb](https://github.com/BoMartinez/BigData-course/blob/main/tareas/db-essay-py.ipynb)."
    ]
   }
  ],
